src/test/ui/pattern/non-structural-match-types.stderr
error: `[closure@$DIR/non-structural-match-types.rs:9:17: 9:19]` cannot be used in patterns
  --> $DIR/non-structural-match-types.rs:9:9
   |
LL |         const { || {} } => {},
   |         ^^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { async {} } => {},
   |         ^^^^^^^^^^^^^^^^^^

error: constant pattern depends on a generic parameter
  --> $DIR/non-structural-match-types.rs:12:9
   |
LL |         const { async {} } => {},
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

